# ProjectUnic

./: CMakeLists.txt  main.cpp  mainwindow.cpp
About/: aboutform.cpp  aboutform.h
AboutProduct/: aboutproductform.cpp  aboutproductform.h
AddPage/: addform.cpp  addform.h
AddShipmentPage/: addshipmentform.cpp  addshipmentform.h
AddSupplyPage/: addsupplyform.cpp  addsupplyform.h
BasicPage/: basicform.cpp  basicform.h
BusinessLogic/: authentication.cpp  authentication.h  productmanager.cpp  productmanager.h
BusinessLogic/Authentication/: authentication.cpp  authentication.h
BusinessLogic/OutputExcel/: outputexcel.cpp  outputexcel.h
BusinessLogic/OutputWord/: outputword.cpp  outputword.h
BusinessLogic/ProductManager/: productmanager.cpp  productmanager.h
EditPage/: editform.cpp  editform.h
LoginPage/: loginform.cpp  loginform.h
MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Settings/: settingsform.cpp  settingsform.h
UIfiles/: aboutform.ui  aboutproductform.ui  addform.ui  addshipmentform.ui  addsupplyform.ui  basicform.ui  editform.ui  loginform.ui  settingsform.ui
